[JSC] Fix CachedCall's argument count if RegExp has named captures https://bugs.webkit.org/show_bug.cgi?id=185587

Reviewed by Mark Lam.

JSTests:

* test262/expectations.yaml:

Source/JavaScriptCore:

If the given RegExp has named captures, the argument count of CachedCall in String#replace
should be increased by one. This causes crash with assertion in test262. This patch corrects
the argument count.

This patch also unifies source.is8Bit()/!source.is8Bit() code since they are now completely
the same.

* runtime/StringPrototype.cpp:
(JSC::replaceUsingRegExpSearch):


Canonical link: https://commits.webkit.org/201341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232092 268f45cc-cd09-0410-ab3c-d52691b4dbfc